--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         /* Hero Section */
         header {
             height: 90vh; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;
-            background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('https://images.unsplash.com/photo-1503387762-592dea58ef23?q=80&w=2000');
+            background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)),url(E0723658-BFAC-4EE4-8831-BE6E611A6AE3.png);
             background-size: cover; background-position: center; border-bottom: 3px solid #bf953f;
         }
         .hero-h1 { font-family: 'Cinzel', serif; font-size: clamp(2.5rem, 8vw, 5rem); background: var(--gold-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
