--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section id="location">
         <div class="section-header">
             <h2>Visit Us | संपर्क करें</h2>
-            <p>📍 Mawan, Tisri, Giridih, Jharkhand (मावां, तिसरी, गिरिडीह)</p>
+            <p>📍Gawan, Tisri, Giridih, Jharkhand, तिसरी, गिरिडीह)</p>
         </div>
         
         <div class="map-box">
